<resources>
    <string name="app_name">Crypto Tools</string>
    <string name="app_desc">An offline encryption/decryption tool that requires no network connection and can serve as the underlying encryption for sensitive information within Dora Box.</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="inject">Inject</string>
    <string name="regenerate">Regenerate</string>
    <string name="aes_encryption">AES Encryption</string>
    <string name="aes_decryption">AES Decryption</string>
    <string name="rsa_encryption">RSA Encryption</string>
    <string name="rsa_decryption">RSA Decryption</string>
    <string name="reset_key_pair">Reset Key-Pair</string>
    <string name="file_encryption">File Encryption</string>
    <string name="file_decryption">File Decryption</string>
    <string name="enter_content_to_be_encrypted">Enter the content to be encrypted</string>
    <string name="enter_encrypted_content">Enter encrypted content</string>
    <string name="encryption_failed">Encryption failed</string>
    <string name="decryption_failed">Decryption failed</string>
    <string name="copied_successfully">Copied successfully</string>
    <string name="warning_text">⚠️ Don’t take a screenshot, press and hold to copy, it will be reset after clearing the cache.</string>
    <string name="save">Save</string>
    <string name="injection_failed">Injection failed</string>
    <string name="enter_rsa_private_key">Enter the RSA private key</string>
    <string name="enter_rsa_public_key">Enter the RSA public key</string>
    <string name="rsa_private_key">RSA Private Key</string>
    <string name="rsa_public_key">RSA Public Key</string>
    <string name="content_to_be_encrypted">Content to be encrypted</string>
    <string name="encrypted_content">Encrypted content</string>
    <string name="enter_8_letters_or_numbers">Enter 8 letters or numbers</string>
    <string name="enter_16_letters_or_numbers">Enter 16 letters or numbers</string>
    <string name="length_must_be_no_less_than_8">The length must be no less than 8</string>
    <string name="length_must_be_no_less_than_16">The length must be no less than 16</string>
    <string name="are_you_sure_you_want_to_reset">Are you sure you want to reset?</string>
    <string name="kind_tips">Kind tips</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_title">Feedback Content</string>
    <string name="input_feedback_content">Enter the content you want to give feedback</string>
    <string name="feedback_successfully">Feedback successful, thank you for your support!</string>
    <string name="failed_to_feedback">Feedback failed, please try again later!</string>
    <string name="encrypted_data_successfully">Data encryption successful</string>
    <string name="decrypted_data_successfully">Data decryption successful</string>
    <string name="decrypted_data_failed">Data decryption failed</string>
    <string name="are_you_sure_you_want_to_decrypt_file">Are you sure you want to decrypt files?</string>
    <string name="select_file">Select File</string>
    <string name="file_save_path_template">File save path:%1$s</string>
    <string name="please_put_file_template">Please put the files to be decrypted in this directory:%1$s</string>
    <string name="file_template">File:%1$s</string>
    <string name="failed_to_read_file">Failed to read file</string>
    <string name="file_not_found">No file found</string>
    <string name="encrypting">Encrypting</string>
    <string name="decrypting">Decrypting</string>
    <string name="file_limit_100mb">The file size cannot be larger than 100MB</string>
    <string name="tutorial">Tutorial</string>
    <string name="password">Password</string>
    <string name="dora_box">Dora Box</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="mnemonic_verifier">Mnemonic Verifier</string>
    <string name="type_imtoken">12 words(imToken)</string>
    <string name="type_ledger">24 words(Ledger)</string>
    <string name="copy">Copy</string>
    <string name="clear">Clear</string>
    <string name="mnemonic_error_please_check">The mnemonic is incorrect, please check</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="facebook_app_id">528101796492808</string>
    <string name="facebook_client_token">e27b76a7a437fc8a5e9ab97cdeb1137b</string>
    <string name="share_content">I found this amazing app, https://www.pgyer.com/cryptotools</string>
    <string name="more">More</string>
    <string name="facebook">Facebook</string>
    <string name="guide_prompt_1">Click here to switch the mnemonic type</string>
    <string name="guide_prompt_2">Mnemonic input area</string>
    <string name="guide_prompt_3">Only mnemonics that meet the rules can be copied</string>
    <string name="guide_prompt_4">Click here to clear all input boxes</string>
    <string name="account_password_management">Account Password Management (Old)</string>
    <string name="create_platform">Create Platform</string>
    <string name="no_platform_yet">No platform yet</string>
    <string name="number_of_platforms">total %1$d platform(s)</string>
    <string name="create">Create</string>
    <string name="platform">Platform</string>
    <string name="description">Description</string>
    <string name="secret_key">Secret Key</string>
    <string name="platform_hint">The name cannot be repeated</string>
    <string name="platform_description_hint">Enter the platform description</string>
    <string name="platform_num_limit_hint">The maximum number of platforms that can be created has been reached</string>
    <string name="platform_already_exists">The platform already exists</string>
    <string name="add_account">Add Account</string>
    <string name="platform_account">Platform Account</string>
    <string name="add">Add</string>
    <string name="account_num_limit_hint">The maximum number of accounts that can be created has been reached</string>
    <string name="account_already_exists">The account already exists</string>
    <string name="account">Account</string>
    <string name="please_input_account">Please enter account</string>
    <string name="please_input_password">Please enter password</string>
    <string name="please_input_description">Please enter description</string>
    <string name="account_password_copied">Account [%1$s]\'s password has been copied</string>
    <string name="description_copied">[%1$s] has been copied</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_platform">Delete Platform</string>
    <string name="are_you_sure_you_want_to_delete_this_platform">Are you sure you want to delete this platform?</string>
    <string name="are_you_sure_you_want_to_export_this_platform">Are you sure you want to export this platform?</string>
    <string name="are_you_sure_you_want_to_delete_this_account">Are you sure you want to delete this account?</string>
    <string name="are_you_sure_you_want_to_export_all_accounts">Are you sure you want to export all accounts?</string>
    <string name="account_cannot_be_empty">Account cannot be empty</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="secret_key_cannot_be_empty">Secret key cannot be empty</string>
    <string name="secret_key_length_between_4_and_16">Secret key must be 4~16 characters long</string>
    <string name="platform_name_cannot_be_empty">Platform name cannot be empty</string>
    <string name="export_platform">Export Platform</string>
    <string name="edit_platform">Edit Platform</string>
    <string name="edit_account">Edit Account</string>
    <string name="export_accounts">Export Accounts</string>
    <string name="please_input_secret_key">Please input secret key</string>
    <string name="secret_key_is_incorrect">Secret key is incorrect</string>
    <string name="platform_account_exported_successfully">Platform account exported successfully, the file is saved in %1$s</string>
    <string name="platform_account_failed_to_export">Platform account failed to export</string>
    <string name="batch_add_accounts">Batch Add Accounts</string>
    <string name="file_failed_to_read">Failed to read file</string>
    <string name="authorization_platform_management">Authorization Platform Management (Old)</string>
    <string name="add_authorization_platform">Add Authorization Platform</string>
    <string name="import_authorization_platform">Import Authorization Platform</string>
    <string name="add_authorization">Add Authorization</string>
    <string name="please_input_platform">Please input platform</string>
    <string name="authorization_num_limit_hint">The maximum number of authorization that can be created has been reached</string>
    <string name="authorization_already_exists">The authorization already exists</string>
    <string name="type">Type</string>
    <string name="direct">Direct</string>
    <string name="connect_cold_wallet">Connect Code Wallet</string>
    <string name="wallet_already_connected">The wallet is already connected. It has been disconnected for you. Please reconnect.</string>
    <string name="payment_reminder">This feature will soon become a paid service, offering enhanced benefits. Stay tuned!</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="already_latest_version">You’re already on the latest version.</string>
    <string name="authorization_platform_management_v2">Authorization Platform Management</string>
    <string name="account_password_management_v2">Account Password Management</string>
    <string name="migrate_data_prompt">Please migrate your data to the new version as soon as possible.</string>
    <string name="hot_platform">Hot Platform</string>
    <string name="platform_account_failed_to_delete">Platform account failed to delete</string>
    <string name="grant_storage_permission_and_try_again">Please grant storage permission and try again.</string>
    <string name="buy_vip">Buy VIP</string>
    <string name="buy_platform_num">Purchase Authorized Platform Quantity</string>
    <string name="buy_authorization_num">Purchase Authorized Account Quantity</string>
    <string name="buy_account_num">Purchase Direct Login Account Quantity</string>
    <string name="buy">Purchase</string>
    <string name="purchase_title">Only 9.9 POL to purchase a lifetime VIP membership, with permanent access to exclusive privileges.</string>
    <string name="table_title_one">Privilege Category</string>
    <string name="table_title_two">Regular User</string>
    <string name="table_title_three">VIP Member</string>
    <string name="table_one_one">AES Encryption/Decryption</string>
    <string name="table_one_two">✅ Supported</string>
    <string name="table_one_three">✅ Supported</string>
    <string name="table_two_one">RSA Encryption/Decryption</string>
    <string name="table_two_two">✅ Supported</string>
    <string name="table_two_three">✅ Supported</string>
    <string name="table_three_one">File Encryption/Decryption</string>
    <string name="table_three_two">❌ Not Supported</string>
    <string name="table_three_three">✅ Supported</string>
    <string name="table_four_one">Decentralized Time Lock</string>
    <string name="table_four_two">❌ Not Supported</string>
    <string name="table_four_three">✅ Supported</string>
    <string name="settings">Settings</string>
    <string name="sound_setting">Sound Setting</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="sound_setting_prompt">Enable sound effects for actions such as successful or failed decryption</string>
    <string name="offline_mode_prompt">In offline mode, all features work without an internet connection</string>
    <string name="software_validity">Software Validity</string>
</resources>