<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.SettingsActivity">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <dora.widget.DoraTitleBar
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            app:dview_backIconTint="@color/white"
            app:dview_title="@string/settings" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_settings_sound_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/selector_item_common"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/sound_setting"
                        android:textColor="@color/colorMainText" />

                    <dora.widget.DoraToggleButton
                        android:id="@+id/tb_settings_sound_setting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        app:dview_checkedColor="@color/purple_200"
                        app:dview_showIndicator="false" />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/sound_setting_prompt"
                    android:textSize="13sp"
                    android:textColor="@color/colorSecondaryText"/>
                <RelativeLayout
                    android:id="@+id/rl_settings_offline_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/selector_item_common"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/offline_mode"
                        android:textColor="@color/colorMainText" />

                    <dora.widget.DoraToggleButton
                        android:id="@+id/tb_settings_offline_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        app:dview_checkedColor="@color/purple_200"
                        app:dview_showIndicator="false" />
                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:text="@string/offline_mode_prompt"
                    android:textSize="13sp"
                    android:textColor="@color/colorSecondaryText"/>
                <!-- 软件有效期限 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical"
                    android:gravity="start">

                    <TextView
                        android:id="@+id/tv_app_validity_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/software_validity"
                        android:textSize="14sp"
                        android:textColor="@color/colorMainText" />

                    <TextView
                        android:id="@+id/tv_app_validity_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:textSize="13sp"
                        android:textColor="@color/colorSecondaryText" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</layout>